# Parow-z

./: CMakeLists.txt  README.md  vcpkg.json
models/cart/: Train_wagon_update.fbx  b.blend  b.blend1  b.mtl
models/cloud/: c.blend  c.blend1  c.fbx  c.mtl  license.txt  scene.gltf
models/ground/: g.mtl
models/ground/t/: g.gltf  g.mtl  untitled.blend  untitled.blend1
models/lantern/: l.mtl  license.txt  scene.gltf
models/rail/: license.txt  r.mtl  scene.gltf
models/rail/r/: r.gltf  r.mtl
models/terrain/: m.mtl
models/tree/: t.fbx  t.gltf  t.mtl
src/: Camera.cpp  Camera.h  Grafika.cpp  Grafika.h  KeyGetter.cpp  KeyGetter.h  Model.cpp  Model.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h
src/shaders/: f.glsl  fChmurki.glsl  fInstance.glsl  fSkyBox.glsl  v.glsl  vChmurki.glsl  vInstance.glsl  vSkyBox.glsl
